--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "heroku-postbuild": "cd client && npm install && npm run build",
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -31,5 +31,8 @@
   },
   "devDependencies": {
     "morgan": "^1.10.0"
+  },
+  "engines": {
+    "node": "8.9.2"
   }
 }
